[project]
name = "well-being-diffusion-maps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.18.0",
    "pytest==7.4.0",
    "python-benedict==0.33.1",
    "sacred==0.8.5",
    "scikit-learn==1.4.0",
    "scipy==1.13.0",
    "setuptools>=65.0.0",
]
